# demo_project_f446re

./: BuildProject.sh  CMakeLists.txt  README.md
1_BSP/: bsp.cmake
1_BSP/STM32_F446XX/inc/: stm32f446xx.h
1_BSP/Startup/: startup_stm32f446retx.s
1_BSP/Utils/inc/: register_handling.h
2_HAL/: hal.cmake
3_Services/: services.cmake
3_Services/BoardStart/inc/: boardstart.h
3_Services/BoardStart/src/: boardstart.c
4_OS/: os.cmake
5_VFB/: vfb.cmake
5_VFB/inc/: vfb.h  vfb_led_control.h
5_VFB/src/: vfb.c
6_Application/: app.cmake
6_Application/LedControl/inc/: led_control.h
6_Application/LedControl/src/: led_control.c
